// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot — disabled 1`] = `
<div>
  <label
    htmlFor="radio-1"
  >
    <div
      className="flex items-center mr-4 py-1 mt-3"
    >
      <input
        className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-gray-200 cursor-not-allowed opacity-0 absolute h-8 w-8"
        disabled={true}
        id="radio-1"
        type="radio"
      />
      <div
        className="bg-white border-2 rounded-full border-gray-400 w-5 h-5 flex flex-shrink-0 justify-center items-center mr-2 focus-within:border-gray-500"
      >
        <svg
          aria-hidden="true"
          className="fill-current hidden w-3 h-3 text-gray-600 pointer-events-none bg-gray-300 rounded-full"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="block text-small font-semibold "
      >
        Disabled
      </span>
    </div>
  </label>
</div>
`;

exports[`snapshot — error 1`] = `
<div>
  <label
    htmlFor="radio-1"
  >
    <div
      className="flex items-center mr-4 py-1 mt-3"
    >
      <input
        className="mt-1 border rounded px-2 py-1 w-full text-regular border-red-300 bg-white opacity-0 absolute h-8 w-8"
        id="radio-1"
        type="radio"
      />
      <div
        className="bg-white border-2 rounded-full border-gray-400 w-5 h-5 flex flex-shrink-0 justify-center items-center mr-2 focus-within:border-gray-500"
      >
        <svg
          aria-hidden="true"
          className="fill-current hidden w-3 h-3 text-gray-600 pointer-events-none bg-gray-300 rounded-full"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="block text-small font-semibold text-red-500"
      >
        Error
      </span>
    </div>
  </label>
  <div
    className="flex mt-1 items-center space-x-1 text-red-500"
  >
    <svg
      aria-hidden="true"
      className="w-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zM12 8.25a.75.75 0 01.75.75v3.75a.75.75 0 01-1.5 0V9a.75.75 0 01.75-.75zm0 8.25a.75.75 0 100-1.5.75.75 0 000 1.5z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="block text-xs"
    >
      This is an error
    </span>
  </div>
</div>
`;

exports[`snapshot — helptext 1`] = `
<div>
  <label
    htmlFor="radio-1"
  >
    <div
      className="flex items-center mr-4 py-1 mt-3"
    >
      <input
        className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-white opacity-0 absolute h-8 w-8"
        id="radio-1"
        type="radio"
      />
      <div
        className="bg-white border-2 rounded-full border-gray-400 w-5 h-5 flex flex-shrink-0 justify-center items-center mr-2 focus-within:border-gray-500"
      >
        <svg
          aria-hidden="true"
          className="fill-current hidden w-3 h-3 text-gray-600 pointer-events-none bg-gray-300 rounded-full"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="block text-small font-semibold "
      >
        Helptext
      </span>
    </div>
  </label>
  <div
    className="flex mt-1 items-center space-x-1 text-true-gray-500"
  >
    <svg
      aria-hidden="true"
      className="w-4"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12zm8.706-1.442c1.146-.573 2.437.463 2.126 1.706l-.709 2.836.042-.02a.75.75 0 01.67 1.34l-.04.022c-1.147.573-2.438-.463-2.127-1.706l.71-2.836-.042.02a.75.75 0 11-.671-1.34l.041-.022zM12 9a.75.75 0 100-1.5.75.75 0 000 1.5z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="block text-xs"
    >
      This is the help text
    </span>
  </div>
</div>
`;

exports[`snapshot — vanilla + required 1`] = `
<div>
  <label
    htmlFor="radio-1"
  >
    <div
      className="flex items-center mr-4 py-1 mt-3"
    >
      <input
        className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-white opacity-0 absolute h-8 w-8"
        id="radio-1"
        required={true}
        type="radio"
      />
      <div
        className="bg-white border-2 rounded-full border-gray-400 w-5 h-5 flex flex-shrink-0 justify-center items-center mr-2 focus-within:border-gray-500"
      >
        <svg
          aria-hidden="true"
          className="fill-current hidden w-3 h-3 text-gray-600 pointer-events-none bg-gray-300 rounded-full"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="block text-small font-semibold "
      >
        Required *
      </span>
    </div>
  </label>
</div>
`;

exports[`snapshot — vanilla 1`] = `
<div>
  <label
    htmlFor="radio-1"
  >
    <div
      className="flex items-center mr-4 py-1 mt-3"
    >
      <input
        className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-white opacity-0 absolute h-8 w-8"
        id="radio-1"
        type="radio"
      />
      <div
        className="bg-white border-2 rounded-full border-gray-400 w-5 h-5 flex flex-shrink-0 justify-center items-center mr-2 focus-within:border-gray-500"
      >
        <svg
          aria-hidden="true"
          className="fill-current hidden w-3 h-3 text-gray-600 pointer-events-none bg-gray-300 rounded-full"
          fill="currentColor"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clipRule="evenodd"
            d="M19.916 4.626a.75.75 0 01.208 1.04l-9 13.5a.75.75 0 01-1.154.114l-6-6a.75.75 0 011.06-1.06l5.353 5.353 8.493-12.739a.75.75 0 011.04-.208z"
            fillRule="evenodd"
          />
        </svg>
      </div>
      <span
        className="block text-small font-semibold "
      >
        Vanilla
      </span>
    </div>
  </label>
</div>
`;
